# rag-poc

./: README.md
mcp-server/: pyproject.toml  requirements.tx
mcp-server/src/mcp_server/: test_installation.py
mcp-server/src/mcp_server/utils/: debug_decorators.py  logging_config.py
rag-poc/: pyproject.toml
rag-poc/docs/: システム構成.md  システム構成案_gemini.md
rag-poc/docs/AIエージェント/: AIエージェントの構成.md  関係図_ワークフロー図.md
rag-poc/docs/AIエージェント_v0/: AIエージェントの構成.md  概念図_グラフ図.md
rag-poc/docs/AIツール_v0.1/: ingest.md  システム構成_MCP案.md
rag-poc/lambda/src/rag_poc/: app.py  rag_service.py  requirements.txt
