[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "behike56", email = "fxy.x@lambda-publishing.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "mcp[all,server]>=1.25.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[project.scripts]
mcp-server = "mcp_server:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
